hard-gists/3d5aa90144a4696be61b3991aa339cc5/run.log
=== Docker Run Log for 3d5aa90144a4696be61b3991aa339cc5 ===
Started at: Mi 29. Okt 14:12:38 CET 2025

[2025-10-29 14:12:39] START: Running container for 3d5aa90144a4696be61b3991aa339cc5
[2025-10-29 14:12:39] SUCCESS: Container f41ca6b2b328609cec37f34d7c1f3bd6e66fbb7541093fae3b8fefe48071237b started for 3d5aa90144a4696be61b3991aa339cc5
=== Container logs for 3d5aa90144a4696be61b3991aa339cc5 ===
  File "/snippet.py", line 32
    print "Error processing mail"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3d5aa90144a4696be61b3991aa339cc5 ===
[2025-10-29 14:12:41] INFO: Container f41ca6b2b328609cec37f34d7c1f3bd6e66fbb7541093fae3b8fefe48071237b has stopped
